jira/deployment.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: jira
  namespace: jira
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: jira
        deploymentconfig: jira
    spec:
      volumes:
        - name: jira-data
          persistentVolumeClaim:
            claimName: pvc-jira
        - name: ca-pemstore
          configMap:
            name: ca-pemstore
      containers:
        - name: jira
          image: docker.io/atlassian/jira-software
          securityContext:
            privileged: true
          lifecycle:
            postStart:
              exec:              
                # command: ["/bin/bash", "-c", "/opt/java/openjdk/bin/keytool -import -keystore /opt/java/openjdk/lib/security/cacerts -file /etc/ssl/certs/my-cert/bos.pem -storepass changeit -noprompt && cp /etc/ssl/certs/my-cert/bos.pem /usr/local/share/ca-certificates/bos.crt && update-ca-certificates"]
                command: ["/bin/bash", "-c", "/opt/java/openjdk/bin/keytool -import -keystore /opt/java/openjdk/jre/lib/security/cacerts -file /etc/ssl/certs/my-cert/bos.pem -storepass changeit -noprompt && cp /etc/ssl/certs/my-cert/bos.pem /usr/local/share/ca-certificates/bos.crt && update-ca-certificates"]

          ports:
            - containerPort: 8080
              protocol: TCP
          resources: 
            requests:
              memory: 4Gi
          volumeMounts:
            - name: jira-data
              mountPath: /var/atlassian/application-data/jira
            - name: ca-pemstore
              mountPath: /etc/ssl/certs/my-cert 
          imagePullPolicy: Always
      serviceaccount: default
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
