jira/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgresql
spec:
  containers:
  - env:
    - name: POSTGRESQL_USER
      value: elad
    - name: POSTGRESQL_PASSWORD
      value: password
    - name: POSTGRESQL_DATABASE
      value: jira
    image: registry.redhat.io/rhscl/postgresql-10-rhel7
    name: postgresql
    ports:
    - containerPort: 5432
      protocol: TCP
