jira/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jira
  name: jira
  namespace: jira
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: jira
    deploymentconfig: jira
  sessionAffinity: None
  type: ClusterIP
